fixed text overflow

--- a/react-client/src/components/Category/Category.css
+++ b/react-client/src/components/Category/Category.css
@@ -1,3 +1,11 @@
+.top-panel .panel-title .panel-title-text {
+  margin: 0 auto;
+  padding: 0 105px;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .top-panel .panel-title .editable {
     margin: 0 auto;
     height: 46px;
@@ -272,6 +280,20 @@
     z-index: -1;
     
     box-shadow: -6px 5px 5px rgba(0,0,0,0.65);
+  }
+
+  .category .letter-word-description .word-header .word-header-link {
+    display: block;
+    text-decoration: none;
+    color: #0d0d0d;
+   
+    padding-right: 90px;
+  }
+
+  .category .letter-word-description .word-translation {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
   }
 
 /* Checkboxes */
