--- a/react-client/src/components/TranslationsListItem/TranslationsListItem.css
+++ b/react-client/src/components/TranslationsListItem/TranslationsListItem.css
@@ -23,6 +23,12 @@
     padding: 5px;
 }
 
+.translation-category .translation-category-text {
+  padding-right: 20px;
+  
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
   /* Header above Translations */
   
